examples/good/05-If.tms
void main() {
  int i = 20;
  if (i >= 20) {
    printString("i is big");
    i--;
  } else {
    printString("i is not big");
  }

  if (true && false) {
    return;
  }

  printInt(i);
  return;
}