examples/bad/05-NoBlock.tms
void main () {
  int i = 0;
  if (true)
    i++;
  return;
}